[KAN-20]: Complete oauth2 + logout + adjust some codes
